# stork

./: .gitignore  CMakeLists.txt  README.md
msvc/stork/: stork.sln  stork.vcxproj  stork.vcxproj.filters
resource/: test.lts  test.stk
source/: compiler.cpp  compiler.hpp  compiler_context.cpp  compiler_context.hpp  errors.cpp  errors.hpp  expression.cpp  expression.hpp  expression_tree.cpp  expression_tree.hpp  expression_tree_parser.cpp  expression_tree_parser.hpp  helpers.hpp  incomplete_function.cpp  incomplete_function.hpp  lookup.hpp  main.cpp  module.cpp  module.hpp  push_back_stream.cpp  push_back_stream.hpp  runtime_context.cpp  runtime_context.hpp  standard_functions.cpp  standard_functions.hpp  statement.cpp  statement.hpp  test.stk  tokenizer.cpp  tokenizer.hpp  tokens.cpp  tokens.hpp  type.hpp  types.cpp  types.hpp  variable.cpp  variable.hpp
xcode/stork/stork.xcodeproj/: project.pbxproj
xcode/stork/stork.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
